# dBot

./: .gitignore  .gitmodules  LICENSE  README.md
Docs/: DDMR Diagram.pptx  README.md  exporttoPDF.sh  main.blg
Docs/Charts/: CascadedPID.drawio  SystemOverview.drawio  WheelModel.drawio  ddmrModel.drawio
Docs/Y3Report/: .gitignore  References.bib  main.tex  main.xmpdata  uom_eee_dissertation_casson.cls
Firmware/: %0.3f:%0.3:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f:%0.3f  .gitignore  Makefile  README.md  V1Tune.h  dbot_update_fw.sh  debugConsole.sh  deviceConfig.json  firmware.c  generated.stm32f401cc.ld  rprog_mcu.sh  rules.mk  updateFW.sh  update_fw.sh
Firmware/common/: common.h  errorCodes.h  pid.h  pinnmap.h  pinnmapV1.h  queue.h  ringbuffer.h  task.h  utils.h
Firmware/drivers/: MPU6050.h  analog.h  clock.h  encoder.h  gpio.h  i2c.h  pwm.h  serial.h  system.h  systick.h
Firmware/inc/: DCMotor.h  MPU6050.h  Madjwick.h  calib.h  callibration.h  coms.h  control.h  controler.h  ddmr.h  imu.h  kinematics.h  lqr.h  madgwick.h  mcuComs.h  motor.h  pid.h  robot.h  serComs.h  services.h  test.h  twsb.h
Firmware/pubrpc/: coms.h  mcuComs.h  serComs.h
Firmware/sensors/: MPU6050.h
Firmware/tests/: ringbufferTests  ringbufferTests.c  runTest.sh  utilsTests  utilsTests.c
Firmware/trials/: serial.c
Hardware/: .gitignore  README.md
Hardware/CAD/: BTRemote_Low.stl  BatteryBoard.stl  BatteryPack v24.stl  BatteryPack.stl  BatteryStack.stl  Body.stl  Bummper.stl  Chassis Low v24.stl  Chassis Low.stl  Chassis.stl  ChassisLow.stl  DCMotor.stl  Display.f3d  DisplaySquare.f3d  Head.stl  Lid.stl  Motor Bracket.stl  Motor.stl  Standoff.stl  Top.stl  Wheel.stl  block.stl
Hardware/DCMotorDriver/: #auto_saved_files#  BatteryCharger.kicad_sch  DCDriver.kicad_sym  DCMotorDriver.kicad_pcb  DCMotorDriver.kicad_pro  DCMotorDriver.kicad_sch  PSU.kicad_sch  driver.kicad_sch  sym-lib-table
Matlab/: .gitignore  ControlSystemAnalysis.mlx  DCMotorDynamics.mlx  DCMotorSensitivity.mlx  DDMRKinematics.mlx  DDMRModel.slx  DDMRModel.slx.original  DisturbanceReject.mlx  KalmanFilter.mlx  Modelinng and Controll of TWSB.mlx  SISigGen.mlx  Simulator.mlx  StaticBalanceAnalysis.mlx  TWSB_Dynamics.mlx  TWSB_SIM.slx  TWSB_SIM.slx.original  TWSB_SIM.slxc  TrackLapAnalysis.mlx  TrajectoryReconstruction.mlx  Wheel_Assembly.slx  animateTrajectory.m  bodysim.slx  bodysim.slx.original  cartPoleModel.slx  comshiftAnalysis.mlx  datasetpreprocess.mlx  dcMotorAnalysis.mlx  dc_motor_ident_signals.mat  derivations.mlx  extractMotorData.m  iirFilt.mlx  imuAnalisis.mlx  imu_tests.mlx  linVelAnalysis.mlx  mapping.m  matlab.mat  parseDataSet.m  plotDDMRTrajectory.m  plotStartEndMarkers.m  psdFFT.m  (+4 more)
Software/: .gitignore  CMakeLists.txt  README.md  build.sh  buildSW.sh  build_zero.sh  buildr.sh  common.h  coms.c  dbotBuild.sh  debugConsole.sh  devicePub.csv  lauchdBotCam.sh  launch.sh  leaks_report.txt  paramRegMap.csv  playLoop.sh  playStream.py  profiler.sh  protocol.json  readSerial.py  robotConfig.json  run.sh  runCV.sh  serialComs.c  test.sh  test.txt  updateSW.sh  updateSW_bot.sh  zmqBridge.c
Software/MediaMtx/: mediamtx.yml
Software/Test/: receiver  receiver.c  sender  sender.c  zmqPubTest.cpp  zmqSubTest.cpp
Software/app/: index.html  server.py
Software/common/: common.h  common.hpp  coms.hpp  ringbuffer.h  serialComs.h
Software/configs/: botConfig.json  dbotConfig.json  robotConfig.json
Software/inc/: calibration.hpp  cmdserver.hpp  comsPC.hpp  fitline.h  messages.h  motorDriver.h  motorDriver.hpp  navigation.hpp  peakTracker.hpp  roi_selector.h  serialComs.h  twsb.hpp  twsbDriver.hpp  utils.h  utils.hpp  vision.hpp  visionNew.hpp  zmqtools.hpp
Software/lib/: stringlib.c  stringlib.h
Software/misc/: buildOpenCV.sh  devicePub.csv  markers_data.csv  mediaMtxConfig.txt  objtrack.py  paramRegMap.csv  plotTrack.py  rawIMU.csv  robotTrack.py  sine_wave.csv  stabalize.sh  stress.txt  telemPubs.csv  telemetry.csv  timplasecreate.py  topCamRec.py  track.csv  transforms.trf
Software/misc/stabilized_videos/: log_s10_sm10.txt  log_s10_sm30.txt  log_s10_sm50.txt  log_s15_sm10.txt  log_s15_sm30.txt  log_s15_sm50.txt  log_s5_sm10.txt  log_s5_sm30.txt  log_s5_sm50.txt
Software/pc/: CMakeLists.txt  README.md
Software/pc/src/: opencvTest.cpp  pcComs.c  serialReader.c
Software/pi/: CMakeLists.txt  README.md
Software/pi/scripts/: rstStm.sh  serialBridge.py  serialRead.py  startUDPStream.sh
Software/pi/src/: piComs.c
Software/raspberry/: README.md
Software/scripts/: buildSW.sh  camCalibCLI.py  camPipe.sh  debugConsole.sh  deployServices.sh  genTestSigs.sh  launchCamPC.sh  launchCamera.sh  launchVisionPC.sh  launchVisionPi.sh  launchVizPipePC.sh  launchVizPipeRobot.sh  libCam.sh  piComs.py  profiler.py  recordTelem.py  rstCycleMCU.sh  runProxy.sh  runProxyBot.sh  runProxyPC.sh  runProxyRobot.sh  sendTestCmd.py  sigGen.py  sigView.py  simTrack.py  syncSW.sh  test.sh  twsbConsole.sh  udpCamStreamViz.sh  updateSW.sh  vizPipeStream.sh  vizualizer.sh
Software/scripts/generated_signals/: chirp_wave.csv  ramp_wave.csv  sine_wave.csv
Software/services/: cam.service  joystick.service  twsb.service  vision.service
Software/src/: broker.cpp  main  main.c  main.cpp  motor  motorDriver.c  opencvTest.cpp  roi_selector.cpp  serialReader.c  vision.cpp
Software/tools/: calibrate.cpp  calibrateCamera.cpp  calibration.cpp  camFilt.cpp  motorDriver.cpp  opencv_rtsp.cpp  remoteControlServer.cpp  run.sh  test.cpp  twsbComs.cpp  twsbDriver.cpp  vision.cpp  visionServer.cpp  zmqComs.cpp  zmqProxy.cpp  zmqPub.cpp  zmqSub.cpp
Software/trials/: audioSine.py  build.sh  cvTest.sh  opencvTest.cpp  serialReader  serialReader.c  zmqBridge.c
Tools/: .gitignore  ComsCLI.py  ComsTerm.py  README.md  SerialZMQ.py  bmpGen.py  console.py  genShapes.sh  logger.py  playStream.py  plot.py  sensorSim.py  sensordata.csv  testSub.py  trasferPi.sh  utils.py  viewStreamUDP.sh
scripts/: camStreamTest.sh  rprog_mcu.sh  rprog_pi.sh  rprog_tool.sh  upload.sh
(+52 files in other folders)
